--- a/src/assets/css/semantic.css
+++ b/src/assets/css/semantic.css
@@ -577,8 +577,9 @@ html {
 }
 
 body {
-  padding-top: 3em;
+/*   padding-top: 3em; */
   padding-bottom: 0em;
+  margin-top: 0em;
   margin-bottom: 6em;
   margin-left: 0px;
   margin-right: 0px;
